# gst-projectm

./: .gitignore  CMakeLists.txt  Dockerfile  OVERVIEW.md  README.md  build.ps1  build.sh  compile_commands.json  convert.sh  projectm-convert  setup.sh  test.ps1  test.sh  vcpkg-configuration.json  vcpkg.json
.cache/clangd/index/: caps.c.39AC8A8C7AFB5A4C.idx  caps.h.FF47992E1747F857.idx  config.h.CB570C1BEB52A7EB.idx  debug.c.34EE2AB5831474C3.idx  debug.h.99EBCC326B5C61B6.idx  enums.h.833083DAD2A3FCEF.idx  gstglbaseaudiovisualizer.c.2F1FDEA7AC45978E.idx  gstglbaseaudiovisualizer.h.D76FFB5BB0539D82.idx  plugin.c.119914B450F14EAD.idx  plugin.h.3B3A2EA0FB27BF29.idx  projectm.c.121F57500DDF22C1.idx  projectm.h.4993886CC9753031.idx
.github/workflows/: build_linux.yml  build_osx.yml  build_windows.yml
cmake/: FindGLIB2.cmake  FindGStreamer.cmake
docs/: BOUNTY.md  BUILDING_LINUX.md  BUILDING_OSX.md  BUILDING_WINDOWS.md  LINUX.md  OSX.md  OVERVIEW.md  TODO.md  WINDOWS.md
src/: caps.c  caps.h  config.h  debug.c  debug.h  enums.h  gl.c  gl.h  gstglbaseaudiovisualizer.c  gstglbaseaudiovisualizer.h  plugin.c  plugin.h  projectm.c  projectm.h
test/: gl.c
